--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,16 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Cobrador</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&"/>
     <script defer src="script.js"></script>
+
+
 </head>
 <body>
-    <div class="login-container" id="login">
-        <h2>Login</h2>
-        <input type="text" id="prefixo" placeholder="Prefixo">
-        <input type="password" id="senha" placeholder="Senha">
-        <button onclick="login()">Entrar</button>
-    </div>
+    <main>
+        <section id="login">
+            <div id="imagem">
+                foto
+            </div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente ao Sitema de Cobrador. </p>
+                <form  method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            airport_shuttle
+                            </span>
+                        <input type="text" id="Prefixo" placeholder="Prefixo">
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                            </span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" > 
+                        <label for="isenha">Senha</label>
+                    </div>
+
+                    <input type="submit" value="Entrar">
+                </form>
+            </div>
+        </section>
+    </main>
 
     <div class="app-container hidden" id="app">
         <header>
@@ -69,3 +93,5 @@
     </div>
 </body>
 </html>
+
+
